src/cloud-tools/yaml/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-tools
  namespace: cloud-tools
  labels:
    app: cloud-tools
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: cloud-tools
  type: NodePort
