src/cloud-tools/yaml/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-tools
  namespace: cloud-tools
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cloud-tools
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloud-tools
            port:
              number: 80
